--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emoji Whack-a-Mole</title>
-    <link rel="stylesheet" href="style.css">
-    <!-- React & ReactDOM -->
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <!-- Babel for JSX -->
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+<!doctype html><!DOCTYPE html>
+
+<html lang="en"><html lang="en">
+
+  <head><head>
+
+    <meta charset="UTF-8" />    <meta charset="UTF-8">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>BuzzCheck</title>    <title>Emoji Whack-a-Mole</title>
+
+  </head>    <link rel="stylesheet" href="style.css">
+
+  <body>    <!-- React & ReactDOM -->
+
+    <div id="root"></div>    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+
+    <script type="module" src="/src/main.jsx"></script>    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+
+  </body>    <!-- Babel for JSX -->
+
+</html>    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
 <body>
     <div id="root"></div>
