Add AdSense banner placeholder and instructions

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BuzzCheck</title>
+    
+    <!-- 
+      ADSENSE SETUP:
+      Paste your AdSense script tag here. It usually looks like this:
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXXXXXX" crossorigin="anonymous"></script>
+    -->
+
     <script type="module" src="/src/main.jsx"></script>
   </head>
   <body>
