--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BuzzCheck</title>
     
-    <!-- 
-      ADSENSE SETUP:
-      Paste your AdSense script tag here. It usually looks like this:
-      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXXXXXX" crossorigin="anonymous"></script>
-    -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8187636241583182"
+     crossorigin="anonymous"></script>
 
     <script type="module" src="/src/main.jsx"></script>
   </head>
